[project]
name = "neon-knights-mud"
version = "0.1.0"
description = "A cyberpunk fantasy MUD prototype with vampires, werewolves, witches, wizards, cyborgs, augments, and advanced AI characters."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
neon-knights = "neon_knights.cli:main"
neon-knights-server = "neon_knights.server:main"
neon-knights-web = "neon_knights.web:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
